<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="action_settings">Settings</string>
    <string name="app_name">SignUpForm</string>
	<string name="cancel">Cancel</string>
    <string name="hello_world">Hello world!</string>
	<string name="ok">OK</string>
	<string name="password_hint">Please enter your password</string>
	<string name="password_label">Password:</string>
	<string name="passwordConfirm_hint">Please re-enter your password</string>
	<string name="passwordConfirm_label">Confirm:</string>
	<string name="submit">Submit</string>
	<string name="username">Username:</string>
	<string name="username_hint">Please enter your username</string>

</resources>
